--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,27 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: development
+  pool: 5
+  username: root
+  password: admin
+  port: 5433
+  host: localhost
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: test
+  pool: 5
+  username: root
+  password: admin
+  port: 5433
+  host: localhost
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: <%= ENV.fetch("DB_NAME") { '' } %>
+  pool: <%= ENV.fetch("DB_POOL") { '' } %>
+  username: <%= ENV.fetch("DB_USER") { '' } %>
+  password: <%= ENV.fetch("DB_PASSWORD") { '' } %>
