--- a/config/database.yml
+++ b/config/database.yml
@@ -25,3 +25,5 @@ production:
   pool: <%= ENV.fetch("DB_POOL") { '' } %>
   username: <%= ENV.fetch("DB_USER") { '' } %>
   password: <%= ENV.fetch("DB_PASSWORD") { '' } %>
+  host: <%= ENV.fetch("DB_HOST") { '' } %>
+  port: <%= ENV.fetch("DB_PORT") { '' } %>
